--- a/style.css
+++ b/style.css
@@ -1,23 +1,16 @@
 body {
-    background-color: #876445;
+    background-color: #4A3933;
+}
+
+img {
+    padding: 10rem 5rem 5rem 10rem;
 }
 
 .container {
-    height: 100%;
-}
-
-.potato {
-    cursor: pointer;
-    padding-top: 10rem;
-}
-
-.title {
     color: white;
-    padding: 15rem 3rem 3rem 3rem;
+    position: relative;
     text-align: center;
+    bottom: 30rem;
+    left: 15rem;
 }
 
-.start-button {
-    padding: 0 auto;
-    text-align: center;
-}
