--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
 body {
     background-color: #694E4E;
+    font-family: 'Nunito', sans-serif;
+}
+
+p {
+    line-height: 2;
 }
 
 img {
@@ -32,5 +37,18 @@ a {
     width: 40%;
     height: 100%;
     text-align: center;
+    padding: 3rem 3rem 0 3rem;
 }
 
+#shop-title {
+    text-decoration: underline;
+}
+
+.potato-info {
+    background-color: #694E4E;
+    height: 40%;
+}
+
+.carousel-inner {
+    padding: 1.5rem 5rem 0 5rem;
+}
