--- a/style.css
+++ b/style.css
@@ -62,3 +62,14 @@ a:hover {
 .carousel-inner {
     padding: 1.5rem 5rem 0 5rem;
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.example::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.example {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;  /* Firefox */
+}
